<resources>
    <string name="app_name">ForWorld</string>
    <string name="number">Enter Mobile Number</string>
    <string name="opt">Enter OTP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="addQuestion1">Enter Question</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in </string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="hello_world">Hello world!</string>
    <string name="facebook_app_id">221623114699507</string>
    <string name="user_exists">User already logged in</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="sign_in_google">Sign in with Google</string>
    <string name="logout_text">Sign out</string>
    <string name="sign_in">Log In</string>
    <string name="Title">Title</string>
    <string name="ans">Answer</string>
    <string name="title_dashboard">Attendees</string>
    <string name="title_notifications">Schedule</string>
    <string name="title_profile">Chat</string>
    <string name="scheduleTime">09:30</string>
    <string name="about_corpcon">CorpCon Events is a company with a difference aimed at the premium end of the private and corporate sectors, offering an exceptional level of service far beyond the expected standards. \n\n From briefing, planning, design and theme to an at event organization, operations and follow through, we take care of every single detail! \n\n We work with our clients, embracing their style with a pinch of our touch, to produce events that convey their key messages and values in a diverse and creative manner. \n\n We believe in strong client focus and long term relationship!</string>
    <string name="scheduke_desc">Registrations will be open for all members who have not already registred online. Attendees are requsted to carry the ID issued to them all the time. No attendees will be allowded inside the venue after the registration are closed</string>
    <string name="spinner_title">Select State</string>
    <string name="runtime_permissions_txt"><![CDATA[Settings->Permission->Enable All Permissions.         \\n Please enable ALL permissions from app settings.]]></string>
    <string name="we_send_you_otp">WE\'VE SENT YOU A 6 DIGIT OTP VIA SMS TO THIS MOBILE NO. </string>
    <string name="enter_otp_you_receive">Enter the OTP you received</string>
    <string name="enter_message">Enter Your Message</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_desc">Enter Feedback</string>
    <string name="send_email">Send Mail</string>
    <string name="open_camera">Open Camera</string>
    <string name="please_press_back_again_to_exit">Press Back Again to exit</string>
    <string name="complainer_name">Enter Complainer name</string>
    <string name="complainer_contact">Enter Complainer Contact Number</string>
    <string name="claim">Claim</string>
    <string name="USIWIZ_ACADEMY">USIWZ Academy</string>
    <string name="Secretery_Letter">Secretery Letter</string>
    <string name="Member_Directory">Member Directory</string>
    <string name="BOE_Activity">BOE Activity</string>
    <string name="USIWIZ_TV">USIWIZ Tv</string>
    <string name="Forums">Forums</string>
    <string name="Close">Close</string>
    <string name="AboutUS">Founded in 1990 during a small office meeting in Mumbai at the hands of a few stalwarts of Zone Urology family is almost 30 years old and encompasses more than 750 members from all over Maharashtra, Gujarat, Madhya Pradesh, Chattisgarh, Goa, Diu and Daman.\n\nGerminated with the prime objectives of focussing on issues relevant to the urologists of Western India the society has fast grown in magnanimity with objectives
spanning academic, social and philanthrophic fields.\n\nTo bring about global change in urology care, attempts are being made to reach out to other specialities, paramedics and common man at large, through our scientific,educational and social initiatives, and publications.\n\nToday we see the USI-WZ delivering knowledge, education, healthcare, stimulate research, innovations and organise various events
and meetings for exchange and dissemination of knowledge and to foster social interactions.</string>
    <string name="question">Assume the first two statements are true. All restaurants in Japan serve beverages. Fanta is a popular soda in Japan. Do Japanese restaurants in the United States serve Fanta?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="action_example">Example action</string>
    <string name="info">All members who were members of the earstwhile West Zone chapter of Urological Society of India would continue automatically to be members of the new registered body known as Urology society of India, West Zone. There shall be two categories of membership.</string>
    <string name="fullMember"><![CDATA[Any person registered with the Medical Council of India, and possessing a qualification from a recognized body of MCh or DNB(Urology, Genitourinary Surgery) or any equivalent qualification of an Indian or foreign University or Institution& residing in the states of Maharashtra, Madhya Pradesh, Chattisgadh, Gujarat, Goa, Diu, Daman, Dadra Nagar Haveli, shall be eligible to become full member of the society, provided he or she is full member of Urological society of India.]]></string>
    <string name="associateMember"><![CDATA[An associate member can be admitted to full membership if he attains speciality qualifications in thefield of Urology as mentioned in (1)& becomes a full member of USI.   Associate Members are not entitled to vote or stand in any time. They will not be allowed to attend any business meeting of the Association. They are entitled to participate in all scientific and social programs.]]></string>
    <string name="procedure">Any eligible person may fill in the prescribed admission form (Article 25) and pay the requisite fees to become Full or Associate Member of the Association; he will become Member after the Council accepts him. An Associate Member may be advanced to Full Membership if he becomes qualified; he has to apply for advancement and he becomes Full Member after the Council accepts him.</string>
    <string name="charges">Admission Fee will be Rs. 100 Life Membership Fee will be as under: \n  Full Life Member  Rs. 3000/-  \n Full Associate Member Rs. 3000/-  \n The amount of Fees can be changed by Annual General Body Meeting provided it is on the agenda.</string>
    <string name="action_hide">Hide Panel</string>
    <string name="action_show">Show Panel</string>
    <string name="action_anchor_enable">Enable Anchor Point</string>
    <string name="action_anchor_disable">Disable Anchor Point</string>
    <string name="hello">Graphical View></string>
    <string name="follow"><![CDATA[Follow us<br/>on <a href="http://twitter.com/umanoapp">Twitter</a>]]></string>
    <string name="category">Category</string>
    <string name="subcategory">Sub Category</string>
    <string name="brand">Brand</string>
    <string name="features">Features</string>
    <string name="sales_cost">Enter Sales Cost</string>
    <string name="original_cost">Enter Original Cost</string>
    <string name="how_much">Enter how much discount</string>
    <string name="addProduct">Add Product</string>
    <string name="vendors">Vendors</string>
    <string name="buy_now">Buy Now</string>
    <string name="images">Images</string>
    <string name="mywallet">My Wallet</string>
    <string name="digitalvistingCard">Digital Visiting Card</string>
    <string name="myproduct">My Product</string>
    <string name="completedorders">Completed Orders</string>
    <string name="offerCreation">Offer Creation</string>
    <string name="offers">Offers</string>
    <string name="businessprofile">Business Profile</string>
    <string name="changepassword">Change Password</string>
    <string name="version">Version</string>
    <string name="mybalance">My Balance</string>
    <string name="myservice">My Services</string>
    <string name="myrewards_offers">Scratch coupon</string>
    <string name="myenquiry">My Enquiry</string>
    <string name="mycart">My Cart</string>
    <string name="myfavorite">My Favorite</string>
    <string name="setting">Setting</string>
    <string name="share">Share</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="offername">Offer Name</string>
    <string name="adddesc">Description</string>
    <string name="validity">Validity</string>
    <string name="price">Price</string>
    <string name="offertype">Select Offer Type</string>
    <string name="genrateoffercode">Generate Offer Code</string>
    <string name="genrateofferlimit">Generate Offer Limit</string>
    <string name="terms"><![CDATA[Terms & condition]]></string>
    <string name="businesscategories">Business Categories</string>
    <string name="otp_messege">OTP Receive on your registered mobile number</string>
    <string name="availablebalance">Available Balance</string>
    <string name="recenttransaction">Recent Transaction</string>
    <string name="totalamount">Total Amount :</string>
    <string name="remove">Remove</string>
    <string name="enquirydetails">Enquiry Details</string>
    <string name="product">Product</string>
    <string name="status">Status</string>
    <string name="ok">Ok</string>
    <string name="select_language">Select Language</string>
    <string name="set_lang_toast">The language is changed successfully.</string>
    <string name="eng">English</string>
    <string name="mar">Marathi</string>
    <string name="hin">Hindi</string>
    <string name="servicedetails">Service Details</string>
    <string name="offersdetails">Offer Details</string>
    <string name="purpose">Purpose</string>
    <string name="business">Business</string>
    <string name="Profile">Profile</string>
    <string name="Feedback">Feedback</string>
    <string name="submit">Submit</string>
    <string name="Address1">Address</string>
    <string name="City">City</string>
    <string name="name">Enter Your Full Name</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="mobile">Mobile</string>
    <string name="amount">Amount</string>
    <string name="scratch">Scratch Coupon</string>
    <string name="requestid">Request Id</string>
    <string name="discountedAmount">Discount Amount</string>
    <string name="product_desc">Product Description</string>
    <string name="businessNumber">Business Mobile Number</string>
    <string name="approval_date">Approval Date</string>
    <string name="vendorrequest">Request From User</string>
    <string name="mydiscountrequest">My Discount Request</string>
    <string name="qrcode">My QR Code</string>
</resources>