<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/ten">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/five"
        app:cardCornerRadius="@dimen/five"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/five">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/requestid"
                        android:textSize="@dimen/twelve" />

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_requestId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/business"
                        android:textSize="@dimen/twelve"/>

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_business_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="@dimen/five"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amount"
                        android:textSize="@dimen/twelve" />

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_requestAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/discountedAmount"
                        android:textSize="@dimen/twelve"/>

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_discountAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="@dimen/five"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_desc"
                        android:textSize="@dimen/twelve" />

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_product_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/businessNumber"
                        android:textSize="@dimen/twelve"/>

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_businessMobile"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_marginTop="@dimen/five"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/status"
                        android:textSize="@dimen/twelve" />

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Regular
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/approval_date"
                        android:textSize="@dimen/twelve"/>

                    <com.windhans.client.forworld.customfonts.MyTextView_Poppins_Bold
                        android:id="@+id/tv_approval_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="@dimen/fifteen"/>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>